Set font-size in highlight not code to get correct line spacing

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -5,11 +5,11 @@ pre.highlight {
   border: 1px solid #ddd;
   margin: 20px 0 20px 0;
   overflow: auto;
+  font-size: 75%;
 }
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
-  font-size: 50%;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
